[package]
name = "imageflow_node"
version = "0.1.1"
authors = ["Lilith River <lilith@imazen.io>"]
edition = "2018"
license = "AGPL-3.0-or-later"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "imageflow_node"
crate-type = ["cdylib"]


[dependencies]
imageflow_core = { git = "https://github.com/imazen/imageflow", tag="v1.3.6-rc36" }
imageflow_types = { git = "https://github.com/imazen/imageflow", tag="v1.3.6-rc36" }
nodejs-sys = "0.3.0"
threadpool = "1.8.0"

[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.10", features = ["native-tls", "blocking"] }
