[package]
name = "imageflow_node"
version = "0.2.0"
authors = ["Lilith River <lilith@imazen.io>"]
edition = "2021"
license = "AGPL-3.0-or-later"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "imageflow_node"
crate-type = ["cdylib"]

[dependencies]
imageflow_core = { git = "https://github.com/imazen/imageflow", tag = "v2.3.0-rc01" }
imageflow_types = { git = "https://github.com/imazen/imageflow", tag = "v2.3.0-rc01" }
napi = { version = "2.16", features = ["napi6"] }
napi-derive = "2.16"

[build-dependencies]
napi-build = "2"
